# simd-dna

./: .gitignore  LICENSE.txt  README.md  codemeta.json  graycode.json  increment.json  increment_tm.json  increment_tm.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt  rule110.json  setup.cfg  ternary-increment.json
docs/source/: conf.py  index.rst  modules.rst  simd_dna.rst
simd_dna/: __init__.py  classes.py  functions.py  register_svg.py  simulation.py  tm.py
