[metadata]
name = simd-dna
version = 1.0.0
author = David Doty and Aaron Ong
author_email = aabong@ucdavis.edu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UC-Davis-molecular-computing/simd-dna

[options]
package_dir =
    = simd_dna
packages = find:
python_requires = >=3.8

[options.packages.find]
where = simd_dna
