[metadata]
name = simd-dna
version = 1.0.1
author = David Doty and Aaron Ong
author_email = aabong@ucdavis.edu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UC-Davis-molecular-computing/simd-dna

[options]
package_dir =
    = .
packages = simd_dna
python_requires = >=3.8
